# task_management_app

./: .env.example  Dockerfile  Makefile  README.md  black.toml  docker-compose.yaml  pyproject.toml
etc/: init-user.sql
project/: api_urls.py  urls.py
project/apps/accounts/: admin.py  apps.py
project/apps/accounts/api/: permissions.py  urls.py
project/apps/accounts/api/serializers/: __init__.py  access_token_serializers.py  user_serializers.py
project/apps/accounts/api/views/: access_token_views.py  user_views.py
project/apps/accounts/management/commands/: create_superuser.py
project/apps/accounts/migrations/: 0001_added_projects.py
project/apps/accounts/models/: user_models.py
project/apps/helpers/: __init__.py  extended_viewsets.py  models.py  static.py
project/apps/projects/: admin.py
project/apps/projects/api/: urls.py
project/apps/projects/api/filters/: __init__.py  task_filtersets.py
project/apps/projects/api/serializers/: __init__.py  project_serializers.py  task_serializers.py
project/apps/projects/api/views/: __init__.py  project_views.py  task_views.py
project/apps/projects/migrations/: 0001_added_project_models.py  0001_added_projects.py
project/apps/projects/models/: __init__.py  project_models.py
project/settings/: common.py  dev.py
