[project]
name = "task-management-app"
version = "0.1.0"
description = ""
authors = [
    {name = "anatoly.rozhkov1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livereload (>=2.7.1,<3.0.0)",
    "django (>=5.1.5,<6.0.0)",
    "django-silk (>=5.3.2,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "drf-extended-viewset (>=0.1.1,<0.2.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
